Fix page-box alignment

--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,10 @@ body {
 /* PAGE CONTAINER */
 .page-box {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
+  padding: 9.6rem 0;
   justify-content: center;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .the-page {
